Remove AfterBurner dependency from Azure Core